Modifica le dimensioni delle immagini e aggiorna le descrizioni per i GPT nel menu

--- a/x.html
+++ b/x.html
@@ -81,13 +81,19 @@ Use, distribution, or modification of this project is strictly prohibited withou
             .toggle-icon:hover{
                 color: var(--compiler1-color);
                 text-decoration: none;
-                transition: color 0.33s;
+                transition: color 0.3s;
                 font-weight: bold;
             }
             .menu-content {
                 display: none;
                 padding: 15px;
                 background-color: var(--info-bg);
+
+                box-shadow: 0 -3px 15px #000000, 
+                -1px 0 -3px 5px #000000,
+                1px 0 -3px 15px #000000,
+                0 1px -3px 15px #000000;
+
                 border: 1px solid #000;
                 border-radius: 13px; /* 5px; */
                 margin-top: 10px;
@@ -98,8 +104,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 margin-bottom: 10px;
             }
             .menu-content .gpt-item img {
-                width: 50px;
-                height: 50px;
+                width: 45px;
+                height: 45px;
                 border-radius: 50%;
                 margin-right: 10px;
             }
@@ -238,28 +244,28 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         alt="Genialabile Logo" type="image/png" aria-label="Genialabile Logo">
                         <span><a href="https://chatgpt.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile" target="_blank"
                             aria-label="Genialabile on ChatGPT">Genialabile</a>
-                            Multidimensional Solutions and Visionary Guide</span>
+                            | Multidimensional Solutions and Visionary Guide</span>
                     </div>
                     <div class="gpt-item">
                         <img src="https://genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png"
                             alt="Trading Milk GPT Logo" type="image/png" aria-label="Trading Milk Logo">
                         <span><a href="https://chatgpt.com/g/g-6792616dcedc8191899e08c5d359128a-trading-milk" target="_blank"
                             aria-label="Trading Milk on ChatGPT">Trading Milk</a>
-                            Trading Solutions and Disciplined Guide</span>
+                            | Trading Solutions and Disciplined Guide</span>
                     </div>
                     <div class="gpt-item">
                         <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png"
                         alt="Mastro GPT Logo" type="image/png" aria-label="Mastro GPT Logo">
                         <span><a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" target="_blank"
                             aria-label="Mastro GPT on ChatGPT">Mastro GPT</a>
-                            The Ultimate Custom GPT Builder.</span>
+                            | The Ultimate Custom GPT Builder.</span>
                     </div>
                     <div class="gpt-item">
                         <img src="https://genialabile.com/assets/icons/other-gpts/sir_atty_96x96.png"
                             alt="Sir Atty Logo" type="image/png" aria-label="Sir Atty Logo">
                         <span><a href="https://chatgpt.com/g/g-67956d85bdb08191873011598d04c277-sir-atty" target="_blank"
                             aria-label="Sir Atty on ChatGPT">Sir Atty</a>
-                            The Puppet: Pulling the Strings of Justice.</span>
+                            | The Puppet: Pulling the Strings of Justice.</span>
                     </div>
                     
 
