--- a/x.html
+++ b/x.html
@@ -24,11 +24,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | Contact</title>
+        <title>Genialabile | x</title>
         <meta name="description" content="Genialabile - Contacts & Social Media, Credits">
          <!-- Meta tags for search engines -->
          <meta name="keywords" content="Genialabile, Links Page, Social Media, Credits, Contact Information">
-         <link rel="canonical" href="https://genialabile.com/contact">
+         <link rel="canonical" href="https://genialabile.com/x">
         
          <!-- Fetching header dynamically -->
         <script>
