--- a/x.html
+++ b/x.html
@@ -313,32 +313,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <div id="preloader"></div>
 
         <!-- Footer Banner Style -->
-        <div id="footer-banner">
-            <div id="footer-content"></div>
+        <div id="footer-info">
+            <div id="footer-info"></div>
         </div>
 
         <!-- Footer -->
         <footer>
             <script src="https://genialabile.com/assets/scripts/footer.js" defer></script>
             <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
+            <script src="https://genialabile.com/assets/scripts/folding.js" defer></script>
         </footer>
-
-
-        <script>
-            function toggleMenu() {
-                const menuContent = document.getElementById('menuContent');
-                const toggleIcon = document.querySelector('.menu-title .toggle-icon');
-                
-                if (menuContent.style.display === 'none' || menuContent.style.display === '') {
-                    menuContent.style.display = 'block';
-                    toggleIcon.textContent = '-';
-                } else {
-                    menuContent.style.display = 'none';
-                    toggleIcon.textContent = '+';
-                }
-            }
-        </script>
-
 
     </body>
 </html>
