--- a/x.html
+++ b/x.html
@@ -42,7 +42,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
         <!-- Preload CSS -->
         <link rel="preload" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-        <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/main.css" crossorigin="anonymous"></noscript>
+        <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" crossorigin="anonymous"></noscript>
     </head>
 
     <body style="background-color: #000000; color: #000000;">
@@ -258,7 +258,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
             <script src="https://genialabile.com/assets/scripts/folding.js" defer></script>
         </footer>
-
     </body>
 </html>
 
