Aggiungi stili per il menu a discesa e aggiorna il titolo della pagina in x.html

--- a/x-test.html
+++ b/x-test.html
@@ -24,11 +24,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | X</title>
-        <meta name="description" content="Genialabile - Contacts & Social Media, Credits">
+        <title>Genialabile | X-Test</title>
+        <meta name="description" content="Genialabile - TEST Contacts & Social Media, Credits">
          <!-- Meta tags for search engines -->
-         <meta name="keywords" content="Genialabile, Links Page, Social Media, Credits, Contact Information">
-         <link rel="canonical" href="https://genialabile.com/x">
+         <meta name="keywords" content="Genialabile, TEST PAGE Links Page, Social Media, Credits, Contact Information">
+         <link rel="canonical" href="https://genialabile.com/x-test">
         
          <!-- Fetching header dynamically -->
         <script>
