--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -206,7 +206,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <div id="preloader"></div>
 
         <!-- Footer Banner Style -->
-        <div id="footer-banner">
+        <div id="footer-info">
             <div id="footer-content"></div>
         </div>
 
