Rinomina classi del menu per maggiore chiarezza e coerenza

--- a/x-test.html
+++ b/x-test.html
@@ -162,12 +162,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                <div class="menu-title" onclick="toggleMenu()">
-                    <h3>🤖 GPTs <span class="toggle-icon">[+]</span></h3>
+                <div class="gpts-title" onclick="toggleMenu()">
+                    <h3>🤖 GPTs <span class="toggle-icon">+</span></h3> <!--[+]-->
                      
                 </div>
                 <hr class="thin-line">
-                <div class="menu-content" id="menuContent">
+                <div class="gtps-content" id="menuContent">
                     <div class="gpt-item">
                         <img src="https://genialabile.com/assets/icons/favicon-96x96.png"
                         alt="Genialabile Logo" type="image/png" aria-label="Genialabile Logo">
