Aggiorna l'icona di attivazione del menu nella sezione GPTs

--- a/x-test.html
+++ b/x-test.html
@@ -163,7 +163,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <section>
                 <div class="gpts-title" onclick="toggleMenu()">
-                    <h3>🤖 GPTs <span class="toggle-icon">+</span></h3> <!--[+]-->
+                    <h3>🤖 GPTs <span class="toggle-icon">⇣</span></h3> <!--[+]-->
                      
                 </div>
                 <hr class="thin-line">
