Aggiorna le icone di attivazione del menu per una migliore coerenza visiva

--- a/x-test.html
+++ b/x-test.html
@@ -163,7 +163,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <section>
                 <div class="gpts-title" onclick="toggleMenu()">
-                    <h3>🤖 GPTs <span class="toggle-icon">⇣</span></h3> <!--[+]-->
+                    <h3>🤖 GPTs <span class="toggle-icon">◎</span></h3> <!--[+]-->
                      
                 </div>
                 <hr class="thin-line">
@@ -204,7 +204,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <br>
                         Feel free to explore our GPTs and discover the power of AI in your hands.
                         <br>
-                        Use the <b>"+"</b> sign to expand the list of Genialabile's GPTs.
+                        Use the <b>"◎"</b> sign to expand the list of Genialabile's GPTs.
                     </p>
                 </section>
             
