Aggiungi la funzionalità di attivazione del menu con gestione degli errori e aggiornamenti di stile

--- a/x-test.html
+++ b/x-test.html
@@ -40,9 +40,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 .catch(error => console.error('Error fetching header:', error));
        </script>
 
-        <!-- Styles GPTs CSS -->
+        <!-- Styles GPTs CSS
         <link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-        <!--
+        
         <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" crossorigin="anonymous"></noscript>
         -->
     </head>
