Correggi il nome della classe per la sezione dei contenuti GPTs e rimuovi uno spazio non necessario nel caricamento del CSS

--- a/x-test.html
+++ b/x-test.html
@@ -42,7 +42,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
         <!-- Styles GPTs CSS
         <link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-        
+
         <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" crossorigin="anonymous"></noscript>
         -->
     </head>
@@ -169,7 +169,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                      
                 </div>
                 <hr class="thin-line">
-                <div class="gtps-content" id="menuContent">
+                <div class="gpts-content" id="menuContent">
                     <div class="gpt-item">
                         <img src="https://genialabile.com/assets/icons/favicon-96x96.png"
                         alt="Genialabile Logo" type="image/png" aria-label="Genialabile Logo">
