Rinomina classi CSS per una migliore coerenza e rimuove codice obsoleto

--- a/x-test.html
+++ b/x-test.html
@@ -163,7 +163,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                <div class="gpts-title" onclick="toggleMenu()">
+                <div class="menu-title" onclick="toggleMenu()">
                     <h3>🤖 GPTs <span class="toggle-icon">+</span></h3> <!--[+]-->
                      
                 </div>
@@ -257,7 +257,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <footer>
             <script src="https://genialabile.com/assets/scripts/footer.js" defer></script>
             <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
-            <script src="https://genialabile.com/assets/scripts/folding.js" defer></script>
+            <script src="https://genialabile.com/assets/scripts/folding.js"></script>
         </footer>
     </body>
 </html>
