Aggiungi il foglio di stile gpts.css per migliorare la gestione degli stili

--- a/header.html
+++ b/header.html
@@ -63,10 +63,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <link rel="preload" href="https://genialabile.com/assets/styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/main.css" crossorigin="anonymous"></noscript>
 <!-- Preload Font Awesome -->
-<link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmj58uS4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmj58uS4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmj58uS4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></noscript>
 <!-- About -->
 <link rel="author" href="https://genialabile.com/contacts">
+
+
+ <!-- Styles GPTs CSS -->
+        <link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
+        <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" crossorigin="anonymous"></noscript>
 
 <!-- // SCRIPT // -->
 
