Rinomina la classe CSS "gpts-content" in "menu-content" per migliorare la coerenza

--- a/x-test.html
+++ b/x-test.html
@@ -222,7 +222,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                      
                 </div>
                 <hr class="thin-line">
-                <div class="gpts-content" id="menuContent">
+                <div class="menu-content" id="menuContent">
                     <div class="gpt-item">
                         <img src="https://genialabile.com/assets/icons/favicon-96x96.png"
                         alt="Genialabile Logo" type="image/png" aria-label="Genialabile Logo">
