--- a/header.html
+++ b/header.html
@@ -24,25 +24,30 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Esempio: Remove no-id-policy -->
+<meta http-equiv="Permissions-Policy" content="">
+<!-- Upgrade Insecure Requests
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+-->
 <!-- Security Headers -->
 <meta name="referrer" content="no-referrer-when-downgrade">
 <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
 <!-- Author & Copyright -->
-<meta name="author" content=" GENiALABILE by seiseisette">
-<meta name="copyright" content="© 2025 Genialabile. All Rights Reserved.">
+<meta name="author" content="Genialabile by seiseisette">
+<meta name="copyright" content="© 2025 Genialabile & Co. All Rights Reserved.">
 <!-- Themes -->
 <meta name="color-scheme" content="dark">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 <meta name="apple-mobile-web-app-title" content="Genialabile">
-<!-- Gen-ia Tags -->
+<!-- Gen-ia Tags 
 <meta name="Genialabile-access" content="true">
 <meta name="GENiALABILE-access" content="true">
 <meta name="Gen-ia-access" content="true">
 <meta name="GENiALABILE" content="true">
 <meta name="Genialabile" content="true">
 <meta name="Gen-ia" content="true">
+-->
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://genialabile.com/assets/icons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="https://genialabile.com/assets/icons/favicon.svg">
@@ -68,7 +73,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -->
 
 <!-- About -->
-<link rel="author" href="https://genialabile.com/contacts">
+<link rel="author" href="https://genialabile.com/contact">
 
 <!-- // SCRIPT // -->
 
