--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Esempio: Remove no-id-policy -->
+<!-- Remove no-id-policy -->
 <meta http-equiv="Permissions-Policy" content="">
 <!-- Upgrade Insecure Requests
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
