Rimuovi commenti obsoleti e aggiorna i meta tag in header.html per migliorare la sicurezza

--- a/header.html
+++ b/header.html
@@ -24,9 +24,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Remove no-id-policy -->
+<!-- Remove no-id-policy 
+<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
 <meta http-equiv="Permissions-Policy" content="">
-<!-- Upgrade Insecure Requests
+ Upgrade Insecure Requests
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 -->
 <!-- Security Headers -->
