—————CSS obsoleto in gpts.css e main.css

--- a/cli.html
+++ b/cli.html
@@ -45,7 +45,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <link rel="preload" href="https://genialabile.com/assets/styles/compiler.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
         <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/compiler.css" crossorigin="anonymous"></noscript>
         <!-- compiler.css --><!-- compiler.css --><!-- compiler.css --><!-- compiler.css --><!-- compiler.css --><!-- compiler.css -->
-         
+
+        <!-- Secondary Font -->
+        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
+        <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" crossorigin="anonymous"></noscript>
+      
     </head>
 
     <body style="background-color: #000000; color: #000000;">
