--- a/header.html
+++ b/header.html
@@ -24,8 +24,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Remove no-id-policy 
 <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+<!-- Permt-Policy
 <meta http-equiv="Permissions-Policy" content="">
  Upgrade Insecure Requests
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
@@ -62,9 +62,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Roboto Font -->
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" crossorigin="anonymous"></noscript>
-<!-- Secondary Font -->
-<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" crossorigin="anonymous"></noscript>
 <!-- Preload CSS -->
 <link rel="preload" href="https://genialabile.com/assets/styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
 <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/main.css" crossorigin="anonymous"></noscript>
