--- a/x-test.html
+++ b/x-test.html
@@ -40,64 +40,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 .catch(error => console.error('Error fetching header:', error));
        </script>
 
-        <style>
-            .gpt-container {
-                max-width: 100%; /*1200px; /* 800px; */
-                margin: 0 auto;
-                /* padding: var(--spacing); */
-            }
-
-            .menu-title {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                cursor: pointer;
-                background-color: var(--bg-color);
-                /* padding: 10px; */
-                border-radius: 5px;
-                transition: background-color 3s;
-            }
-            .menu-title:hover {
-                background-color: #00000000;
-            }
-            .menu-title h3 {
-                margin: 0;
-            }
-            .menu-title .toggle-icon {
-                font-size: 1.5rem; /* 20px; */
-            }
-
-            .toggle-icon:hover{
-                color: var(--compiler1-color);
-                text-decoration: none;
-                transition: color 0.3s;
-                font-weight: bold;
-            }
-            .menu-content {
-                display: none;
-                padding: 15px;
-                background-color: var(--info-bg);
-                border: 1px solid #000;
-                border-radius: 13px; /* 5px; */
-                margin-top: 10px;
-            }
-            .menu-content .gpt-item {
-                display: flex;
-                align-items: center;
-                margin-bottom: 10px;
-            }
-            .menu-content .gpt-item img {
-                width: 45px;
-                height: 45px;
-                border-radius: 50%;
-                margin-right: 10px;
-            }
-            .menu-content .gpt-item span {
-                font-size: 16px;
-            }
-
-        </style>
-        
+         <!-- gpts.css -->
+         <link rel="preload" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
+         <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" crossorigin="anonymous"></noscript>
+   
     </head>
 
     <body style="background-color: #000000; color: #000000;">
@@ -302,6 +248,17 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <!-- Preloader -->
         <div id="preloader"></div>
 
+        <!-- Footer Info Style -->
+        <div id="footer-info">
+            <div id="footer-content"></div>
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <script src="https://genialabile.com/assets/scripts/footer.js" defer></script>
+            <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
+        </footer>
+
         <!-- Fetching GPTs There -->
         <script>
             function toggleMenu() {
@@ -318,16 +275,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
             }
         </script>
 
-        <!-- Footer Banner Style -->
-        <div id="footer-info">
-            <div id="footer-content"></div>
-        </div>
-
-        <!-- Footer -->
-        <footer>
-            <script src="https://genialabile.com/assets/scripts/footer.js" defer></script>
-            <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
-        </footer>
     </body>
 </html>
 
