--- a/x-test.html
+++ b/x-test.html
@@ -32,12 +32,26 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
          <!-- Fetching header dynamically -->
         <script>
+        fetch('https://genialabile.com/header.html')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`Errore HTTP! Stato: ${response.status}`);
+                }
+                return response.text();
+            })
+            .then(data => {
+                document.querySelector('head').innerHTML += data;
+                console.log("Header Load!");
+            })
+            .catch(error => console.error('Error in Header', error));
+            /*
             fetch('https://genialabile.com/header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
                 })
                 .catch(error => console.error('Error fetching header:', error));
+            */
        </script>
 
          <!-- gpts.css -->
@@ -259,7 +273,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
         </footer>
 
-        <!-- Fetching GPTs There -->
+        <!-- Fetching GPTs There 
         <script>
             function toggleMenu() {
                 const menuContent = document.getElementById('menuContent');
@@ -274,7 +288,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 }
             }
         </script>
-
+            ->
     </body>
 </html>
 
