Rimuovi stili inline obsoleti nel file x-test.html

--- a/x-test.html
+++ b/x-test.html
@@ -60,7 +60,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     -->
     </head>
 
-    <body style="background-color: #000000; color: #000000;">
+    <body>
+        <!-- <body style="background-color: #000000; color: #000000;"> -->
         <main>
             <!-- Main title -->
             <h1>
