--- a/x-test.html
+++ b/x-test.html
@@ -60,7 +60,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     -->
     </head>
 
-    <body>
+    <body style="background-color: #000000; color: #000000;">
         <!-- <body style="background-color: #000000; color: #000000;"> -->
         <main>
             <!-- Main title -->
