--- a/header.html
+++ b/header.html
@@ -24,8 +24,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+<meta http-equiv="Permissions-Policy" content="interest-cohort=(), browsing-topics=(), private-state-token-redemption=(), private-state-token-issuance=()">
+
 <!-- Permt-Policy
+<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
 <meta http-equiv="Permissions-Policy" content="">
  Upgrade Insecure Requests
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
