--- a/x-test.html
+++ b/x-test.html
@@ -273,7 +273,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
         </footer>
 
-        <!-- Fetching GPTs There 
+        <!-- Fetching GPTs There -->
         <script>
             function toggleMenu() {
                 const menuContent = document.getElementById('menuContent');
@@ -288,7 +288,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 }
             }
         </script>
-            ->
+
     </body>
 </html>
 
