--- a/x-test.html
+++ b/x-test.html
@@ -178,8 +178,77 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
+                    <div class="menu-title" onclick="toggleMenu()">
+                        <h3>🤖 GPTs <span class="toggle-icon" aria-label="Toggle Menu">+</span></h3>
+                    </div>
+                    <hr class="thin-line">
+                    <div class="menu-content" id="menuContent">
+                        <!-- Genialabile -->
+                        <div class="gpt-item">
+                            <img src="https://genialabile.com/assets/icons/favicon-96x96.png" 
+                                 alt="Genialabile Logo" 
+                                 class="gpt-icon" 
+                                 aria-label="Genialabile Logo">
+                            <span>
+                                <a href="https://chatgpt.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile" 
+                                   target="_blank" 
+                                   aria-label="Genialabile on ChatGPT">
+                                   Genialabile
+                                </a> 
+                                | Multidimensional Solutions and Visionary Guide
+                            </span>
+                        </div>
+                        <!-- Trading Milk -->
+                        <div class="gpt-item">
+                            <img src="https://genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png" 
+                                 alt="Trading Milk Logo" 
+                                 class="gpt-icon" 
+                                 aria-label="Trading Milk Logo">
+                            <span>
+                                <a href="https://chatgpt.com/g/g-6792616dcedc8191899e08c5d359128a-trading-milk" 
+                                   target="_blank" 
+                                   aria-label="Trading Milk on ChatGPT">
+                                   Trading Milk
+                                </a> 
+                                | Trading Solutions and Disciplined Guide
+                            </span>
+                        </div>
+                        <!-- Mastro GPT -->
+                        <div class="gpt-item">
+                            <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png" 
+                                 alt="Mastro GPT Logo" 
+                                 class="gpt-icon" 
+                                 aria-label="Mastro GPT Logo">
+                            <span>
+                                <a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" 
+                                   target="_blank" 
+                                   aria-label="Mastro GPT on ChatGPT">
+                                   Mastro GPT
+                                </a> 
+                                | The Ultimate Custom GPT Builder
+                            </span>
+                        </div>
+                        <!-- Sir Atty -->
+                        <div class="gpt-item">
+                            <img src="https://genialabile.com/assets/icons/other-gpts/sir_atty_96x96.png" 
+                                 alt="Sir Atty Logo" 
+                                 class="gpt-icon" 
+                                 aria-label="Sir Atty Logo">
+                            <span>
+                                <a href="https://chatgpt.com/g/g-67956d85bdb08191873011598d04c277-sir-atty" 
+                                   target="_blank" 
+                                   aria-label="Sir Atty on ChatGPT">
+                                   Sir Atty
+                                </a> 
+                                | The Puppet: Pulling the Strings of Justice
+                            </span>
+                        </div>
+                    </div>
+                </section>
+                <!--
+                <section>
                 <div class="menu-title" onclick="toggleMenu()">
-                    <h3>🤖 GPTs <span class="toggle-icon">+</span></h3> <!--[+]-->
+                    <h3>🤖 GPTs <span class="toggle-icon">+</span></h3>
                      
                 </div>
                 <hr class="thin-line">
@@ -213,6 +282,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             | The Puppet: Pulling the Strings of Justice.</span>
                     </div>                   
                 </section>
+                
+                -->
+
                 <section>
                     <p></p>
                     <p>
