--- a/header.html
+++ b/header.html
@@ -24,13 +24,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Permissions-Policy" content="interest-cohort=(), browsing-topics=(), private-state-token-redemption=(), private-state-token-issuance=()">
-
+<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <!-- Permt-Policy
+<meta http-equiv="Permissions-Policy" content="interest-cohort=(), browsing-topics=(), private-state-token-redemption=(), private-state-token-issuance=()">
 <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
 <meta http-equiv="Permissions-Policy" content="">
  Upgrade Insecure Requests
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 -->
 <!-- Security Headers -->
 <meta name="referrer" content="no-referrer-when-downgrade">
@@ -80,12 +81,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Redirect HTTP to HTTPS -->
 <script>
     if (location.protocol === 'http:') {
+        console.log('Redirecting to HTTPS...');
         location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
     }
 </script>
 <!--Style Fallback -->
 <style>
-    body {
+    body:not(.loaded) {
         visibility: hidden;
         opacity: 0;
         transition: opacity 1.3s ease-in-out;
