--- a/header.html
+++ b/header.html
@@ -24,15 +24,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+<!-- Policy -->
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-<!-- Permt-Policy
-<meta http-equiv="Permissions-Policy" content="interest-cohort=(), browsing-topics=(), private-state-token-redemption=(), private-state-token-issuance=()">
-<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
 <meta http-equiv="Permissions-Policy" content="">
- Upgrade Insecure Requests
-
--->
 <!-- Security Headers -->
 <meta name="referrer" content="no-referrer-when-downgrade">
 <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
@@ -81,13 +75,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!-- Redirect HTTP to HTTPS -->
 <script>
     if (location.protocol === 'http:') {
-        console.log('Redirecting to HTTPS...');
         location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
     }
 </script>
 <!--Style Fallback -->
 <style>
-    body:not(.loaded) {
+    body {
         visibility: hidden;
         opacity: 0;
         transition: opacity 1.3s ease-in-out;
