--- a/x-test.html
+++ b/x-test.html
@@ -55,7 +55,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
        </script>
 
          <!-- gpts.css -->
-         <link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
+         <link rel="preload" href="https://genialabile.com/assets/styles/gpts.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
          <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/gpts.css" crossorigin="anonymous"></noscript>
     
     </head>
