Modifica il titolo del menu da "GPTs" a "ChatGPTs"

--- a/x-test.html
+++ b/x-test.html
@@ -183,7 +183,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <section>
                     <div class="menu-title" onclick="toggleMenu()">
-                        <h3>🤖 GPTs <span class="toggle-icon" aria-label="Toggle Menu">+</span></h3>
+                        <h3>🤖 ChatGPTs</h3><span class="toggle-icon" aria-label="Toggle Menu">+</span>
                     </div>
                     <hr class="thin-line">
                     <div class="menu-content" id="menuContent">
