--- a/header.html
+++ b/header.html
@@ -26,7 +26,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Policy -->
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=(), fullscreen=()">
+<!--
 <meta http-equiv="Permissions-Policy" content="">
+-->
 <!-- Security Headers -->
 <meta name="referrer" content="no-referrer-when-downgrade">
 <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
