--- a/x-test.html
+++ b/x-test.html
@@ -234,7 +234,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                                 <a href="https://chatgpt.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile" 
                                    target="_blank" 
                                    aria-label="Genialabile on ChatGPT">
-                                   Genialabile</a> | Multidimensional Solutions and Visionary Guide
+                                   Genialabile</a>: Multidimensional Solutions and Visionary Guide
                             </span>
                         </div>
                         <!-- Trading Milk -->
@@ -247,7 +247,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                                 <a href="https://chatgpt.com/g/g-6792616dcedc8191899e08c5d359128a-trading-milk" 
                                    target="_blank" 
                                    aria-label="Trading Milk on ChatGPT">
-                                   Trading Milk</a> | Trading Solutions and Disciplined Guide
+                                   Trading Milk</a>: Trading Solutions and Disciplined Guide
                             </span>
                         </div>
                         <!-- Mastro GPT -->
@@ -260,7 +260,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                                 <a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" 
                                    target="_blank" 
                                    aria-label="Mastro GPT on ChatGPT">
-                                   Mastro GPT</a> | The Ultimate Custom GPT Builder
+                                   Mastro GPT</a>: The Ultimate Custom GPT Builder
                             </span>
                         </div>
                         <!-- Sir Atty -->
@@ -273,7 +273,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                                 <a href="https://chatgpt.com/g/g-67956d85bdb08191873011598d04c277-sir-atty" 
                                    target="_blank" 
                                    aria-label="Sir Atty on ChatGPT">
-                                   Sir Atty</a> | Pulling the Strings of Justice
+                                   Sir Atty</a>: Pulling the Strings of Justice
                             </span>
                         </div>
                     </div>
