--- a/header.html
+++ b/header.html
@@ -40,14 +40,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <meta name="color-scheme" content="dark">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-<meta name="apple-mobile-web-app-title" content="Genialabile">
-<!-- Gen-ia Tags 
-<meta name="Genialabile-access" content="true">
-<meta name="GENiALABILE-access" content="true">
-<meta name="Gen-ia-access" content="true">
-<meta name="GENiALABILE" content="true">
-<meta name="Genialabile" content="true">
-<meta name="Gen-ia" content="true">
+
+<meta name="apple-mobile-web-app-title" content="Gen & Co.">
+<!-- <meta name="apple-mobile-web-app-title" content="Genialabile"> -->
+
+<!-- Favicon-Old
+<link rel="icon" type="image/png" href="https://genialabile.com/assets/icons/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/svg+xml" href="https://genialabile.com/assets/icons/favicon.svg">
+<link rel="shortcut icon" href="https://genialabile.com/assets/icons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="https://genialabile.com/assets/icons/apple-touch-icon.png">
+-->
+<!-- Manifest-Old
+<link rel="manifest" href="https://genialabile.com/site.webmanifest" crossorigin="use-credentials">
 -->
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://genialabile.com/assets/icons/favicon-96x96.png" sizes="96x96">
@@ -55,7 +59,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <link rel="shortcut icon" href="https://genialabile.com/assets/icons/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="https://genialabile.com/assets/icons/apple-touch-icon.png">
 <!-- Manifest -->
-<link rel="manifest" href="https://genialabile.com/site.webmanifest" crossorigin="use-credentials">
+<link rel="manifest" href="https://genialabile.com/assets/icons/site.webmanifest" crossorigin="use-credentials">
+
+
 <!-- Preconnect for Performance -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
