Aggiungi l'attributo target="_blank" al link nella sezione Ether per aprire in una nuova scheda

--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <h3>🌐 Ether</h3>
                     <hr class="thin-line">
                     <p>
-                        Genialabile's <a href="https://chatgpt.com/g/g-677ae4e8737881919b64c0ba960abb6b-genialabile-co"
-                        aria-label="Genialabile's GPTs Collection">GPTs</a> Collection on ChatGPT.
+                        Genialabile's <a href="https://chatgpt.com/g/g-677ae4e8737881919b64c0ba960abb6b-genialabile-co" target="_blank"
+                        aria-label="Genialabile's GPTs Collection on ChatGPT">GPTs</a> Collection on ChatGPT.
                     </p>  
                     <p>
                         Home Pitch at https://<a href="https://genialabile.com/"
