--- a/footer.html
+++ b/footer.html
@@ -28,10 +28,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
     aria-label="Genialabile Home Pitch" title="Genialabile Home Pitch">
     HP</a>
     |
+    <a href="https://chatgpt.com/g/g-677ae4e8737881919b64c0ba960abb6b-genialabile-co" target="_blank"
+    aria-label="Genialabile's GPTs Collection on ChatGPT" title="Genialabile Live CLI Presentation">
+    GPTs</a>
+    |
+    <!--
     <a href="https://genialabile.com/cli"
     aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
     CLI</a>
     |
+    -->
     <a href="https://genialabile.com/contact"
     aria-label="Contact & Social" title="Contact & Social">
     CONTACT</a>
