--- a/index.html
+++ b/index.html
@@ -62,18 +62,20 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <section>
                 <h2>Home Pitch</h2>
                 <hr class="thin-line">
-                    <p id="imp-links">  
-                        Get ready to explore the key features of Genialabile,
+                    <p>  
+                        Get ready to explore the key features of Genialabile's GPT,
                         the AI solution designed for your growth and creativity.
                     </p>
-                    <p>
-                        Not in the mood to read it all? Let me summarize it for you!
+                    <p id="imp-links">
+                        Not in the mood to read it all? Let the LLM do the work for you!
                         <br>
-                        Turn on the
+                        Just turn on the
                         <a href="https://genialabile.com/cli"
                         aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
                         Command Line Interface</a>
-                        and I’ll bring it to life... ✨
+                        and relax... ✨
+                        <br>
+                        Or, you can go old-school and doomscroll through it yourself.”
                     </p>
             </section>
             <section><br></section>
