--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <a href="https://genialabile.com/cli"
                         aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
                         Command Line Interface</a>
-                        and relax... ✨
-                        <br>
-                        Or, you can go old-school and doomscroll through it yourself.”
+                        and relax... Or, you can go old-school and doomscroll through it yourself.
                     </p>
             </section>
             <section><br></section>
 
-            <!-- Content Section -->
+            <!-- Content Section // -->
             <div>
                 <section>
                     <h3>💡 Inspire</h3>
